@@ -1,3 +1,7 @@
+2004-05-20  Per Bothner  <per@bothner.com>
+
+	* OutPort.java (writeChars):  Remove redundant method.
+
 2004-05-12  Per Bothner  <per@bothner.com>
 
 	* MethodProc.java (mostSpecific):  Handle the case that two or more
